@@ -1,3 +1,6 @@
+2476.	[doc]		ARM: improve documentation for max-journal-size and
+			ixfr-from-differences. [RT #15909] [RT #18541]
+
 2475.	[bug]		LRU cache cleanup under overmem condition could purge
 			particular entries more aggresively. [RT #17628]
 
